@@ -19,6 +19,8 @@ git-annex (10.20250829) UNRELEASED; urgency=medium
     and a repository in the directory got removed.
   * Added annex.assistant.allowunlocked config.
   * Add git-remote-p2p-annex and git-remote-tor-annex to standalone builds.
+  * enableremote: Disallow using type= to attempt to change the type of an
+    existing remote.
 
  -- Joey Hess <id@joeyh.name>  Fri, 29 Aug 2025 12:34:06 -0400
 
